# PyFuncPrototypes

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Interface.md  Wants.md
docs/diagrams/src/: ArgChecker.puml  FiniteAppluer.puml  FixtureCollapser.puml  FixtureMachine.puml  SignatureMachine.puml  checker-state-machine.puml  classes.puml  test.puml
pyprototypes/: BaseMatchers.py  DictStack.py  FixtureMachine.py  FunctionMetaData.py  NameTypeMachine.py  NameTypeMatcher.py  ParamChecker.py  Signature.py  SignatureMachine.py  __init__.py  _typing.py  arguments.py  exceptions.py  fixturemachine.py  fixtures.py  matcher.py  prototype.py  signature.py  signaturemachine.py  stack.py
pyprototypes/interfaces/: FixtureMatcherHeader.py  PrototypeHeader.py  SignatureHeader.py  SignatureMatcherHeader.py
tests/: conftest.py  test_NameTypeMachine.py  test_SignatureMachine.py  test_basematchers.py  test_fixturemachine.py  test_optionmatcher.py  test_paramchecker.py  test_prototype.py  test_signature.py
tests/fixtures/: NameChecker_fixtures.py  input_functions.py  prototypes.py  signature.py
